created a single observer class