@@ -6,6 +6,7 @@ package View; /**
  * Window>Preferences>Java>Code Generation.
  */
 
+import Control.ControlDeskEvent;
 import Model.*;
 import View.LaneView;
 
@@ -13,7 +14,7 @@ import java.awt.*;
 import java.awt.event.*;
 import javax.swing.*;
 
-public class LaneStatusView implements ActionListener, LaneObserver, PinsetterObserver {
+public class LaneStatusView implements ActionListener, Observer {
 
 	private JPanel jp;
 
@@ -133,7 +134,8 @@ public class LaneStatusView implements ActionListener, LaneObserver, PinsetterOb
 		}
 	}
 
-	public void receiveLaneEvent(LaneEvent le) {
+
+	public void receiveEvent(LaneEvent le) {
 		curBowler.setText( ( (Bowler)le.getBowler()).getNickName() );
 		if ( le.isMechanicalProblem() ) {
 			maintenance.setBackground( Color.RED );
@@ -147,10 +149,15 @@ public class LaneStatusView implements ActionListener, LaneObserver, PinsetterOb
 		}
 	}
 
-	public void receivePinsetterEvent(PinsetterEvent pe) {
-		pinsDown.setText( ( new Integer(pe.totalPinsDown()) ).toString() );
+	public void receiveEvent(PinsetterEvent pe) {
+		pinsDown.setText( (Integer.valueOf(pe.totalPinsDown())).toString() );
 //		foul.setText( ( new Boolean(pe.isFoulCommited()) ).toString() );
 		
+	}
+
+	@Override
+	public void receiveEvent(ControlDeskEvent controlDeskEvent) {
+
 	}
 
 }
